multi-environment/kustomize/base/api-node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service
  namespace: app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-pod
  template:
    metadata:
      labels:
        app: node-pod
    spec:
      containers:
        - name: node
          image: abdsyed/kubernetes-api-node:foobarbaz
          resources:
            limits:
              memory: "100Mi"
            requests:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - protocol: TCP
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
